--- a/pdf/index.html
+++ b/pdf/index.html
@@ -30,13 +30,7 @@
 
 <body>
 
-<button id="btnExport" onclick="fnExcelReport();"> EXPORT </button>
-<iframe id="txtArea1" style="display:none"></iframe>
-
-
 <a href="javascript:demoFromHTML()" style="font-size:18px;font-weight:bold;text-decoration:none;" class="button">PDF Download</a>
-
-
 
 <div id="datasource" >
 <h1>Table 1</h1>
@@ -155,14 +149,14 @@
 
 
 
-
-
-
-
-
 <script type="text/javascript">
         function demoFromHTML() {
+        /*
+         * PDF file configuration
+         */
+
            // var doc = new jsPDF('landscape');
+          
             var doc = new jsPDF('p', 'pt', 'a4');
             var source = $('#datasource').html();
             var specialElementHandlers = {
@@ -170,7 +164,7 @@
                     return true;
                 }
             };
-                   
+            // margin of pdf file       
             margins = {
                 top: 25,
                 bottom: 25,
@@ -195,40 +189,6 @@
               );
 }
 
-
-function fnExcelReport()
-{
-    var tab_text="<table border='2px'><tr bgcolor='#87AFC6'>";
-    var textRange; var j=0;
-    tab = document.getElementById('headerTable'); // id of table
-
-    for(j = 0 ; j < tab.rows.length ; j++) 
-    {     
-        tab_text=tab_text+tab.rows[j].innerHTML+"</tr>";
-        //tab_text=tab_text+"</tr>";
-    }
-
-    tab_text=tab_text+"</table>";
-    tab_text= tab_text.replace(/<A[^>]*>|<\/A>/g, "");//remove if u want links in your table
-    tab_text= tab_text.replace(/<img[^>]*>/gi,""); // remove if u want images in your table
-    tab_text= tab_text.replace(/<input[^>]*>|<\/input>/gi, ""); // reomves input params
-
-    var ua = window.navigator.userAgent;
-    var msie = ua.indexOf("MSIE "); 
-
-    if (msie > 0 || !!navigator.userAgent.match(/Trident.*rv\:11\./))      // If Internet Explorer
-    {
-        txtArea1.document.open("txt/html","replace");
-        txtArea1.document.write(tab_text);
-        txtArea1.document.close();
-        txtArea1.focus(); 
-        sa=txtArea1.document.execCommand("SaveAs",true,"Say Thanks to Sumit.xls");
-    }  
-    else                 //other browser not tested on IE 11
-        sa = window.open('data:application/vnd.ms-excel,' + encodeURIComponent(tab_text));  
-
-    return (sa);
-}
 
 </script>
 </body>
